完成编辑接口数据
完成编辑接口数据，还差删除，今天没时间做了。

--- a/Application/Home/View/Index/face.html
+++ b/Application/Home/View/Index/face.html
@@ -45,6 +45,7 @@
                     <option value="int">int</option>
                     <option value="float">float</option>
                     <option value="file">file</option>
+                    <option value="json">json</option>
                 </select>
             </td>
             <td>
