--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>接口文档</title>
+    <title>{$_title|default = ''}-接口文档</title>
     <link rel="stylesheet" href="__ROOT__/Public/css/bootstrap.min.css"/>
 
     <script type="application/javascript" src="__ROOT__/Public/js/jquery.min.js"></script>
@@ -35,6 +35,7 @@
 <body>
 
 <div class="container">
+    <h2 style="text-align: center; font-weight: bold">{$_title}</h2>
     <div class="row" style="border: 1px solid #FFCCCC; border-radius: 5px">
         <div class="col-xs-3">
             <php> if ($is_login > 0) { </php>
@@ -68,7 +69,7 @@
                             </h4>
                         </div>
                     </a>
-                    <div id="collapseListGroup{$val.id}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading{$val.id}" aria-expanded="false" style="height: 0px;">
+                    <div id="collapseListGroup{$val.id}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading{$val.id}" aria-expanded="false" style="height: 0;">
                         <ul class="list-group">
                             <if condition="$val['_child']">
                                 <volist name="val._child" id="v">
@@ -87,6 +88,11 @@
                                         <span style="position: relative; top: 3px;">{$v.title}</span>
                                     </li>
                                 </a>
+                                    <php> if ($is_login > 0) { </php>
+                                    <a href="javascript:;" onclick="loadFaces({$v.id})" style="float:right; margin-right: 10px; position:relative; top: -28px" data-toggle="modal" data-target="#myModal3">
+                                        编辑
+                                    </a>
+                                    <php> } </php>
                                 </volist>
                             </if>
                         </ul>
@@ -159,11 +165,21 @@
     </div>
 </div>
 
+<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content edit-face">
+
+        </div>
+    </div>
+</div>
+
 <script type="application/javascript">
 
 $(function(){
     loadLginForm(); // 加载登录的表单
 });
+
+var app_id = "{$app_id}";
 
 var obj = $('.list-group-item');
 obj.click(function(){
@@ -199,10 +215,28 @@ function addParam()
  */
 function loadLginForm()
 {
-    var app_id = "{$app_id}";
     $.get("{:U('login')}", {app_id: app_id}, function(html){
         $('body').append(html);
     });
+}
+
+/**
+ * 加载编辑接口的表单
+ */
+function loadFaces(id)
+{
+    $.get("{:U('faces')}", {id:id, app_id: app_id}, function(html){
+        $('.edit-face').html(html);
+    });
+}
+
+/**
+ * 删除一个参数列
+ * @param obj
+ */
+function delThis(obj)
+{
+    $(obj).parent().parent().remove();
 }
 
 </script>
